Fix positioning bug when viewed on mobile with taco button

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ a {
 
 .subtitle {
     color: #c89908;
-    font-size: 1.7em;
-    padding: 0 2em 0;
+    font-size: 1.5em;
+    padding: .5em 2em 0;
     margin: 1em 0;
 }
 
@@ -141,7 +141,7 @@ a:visited .fa-twitter-square {
 
 .wrapper {
     max-width: 100%;
-    height: 100vh;
+    min-height: calc(100vh + 10em);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -179,7 +179,7 @@ a:visited .fa-twitter-square {
 
 #tacoP p {
     line-height: 1.5;
-    font-size: 1.25em;
+    font-size: 1.1em;
 }
 
 
@@ -190,9 +190,17 @@ a:visited .fa-twitter-square {
 
 #recipeButton {
     display: block;
+    margin: -1.5em auto 0;
+    max-height: 7em;
+}
+
+
+/*
+#recipeButton {
+    display: block;
     margin: 0 auto;
     max-height: 8em;
-}
+}*/
 
 #recipeButton:focus,
 #recipeButton:active,
